<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the9thcompanion.android.app.Deployment"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/textDep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/text_deployment1"
        android:onClick="showDep1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/textDep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_deployment2"
        android:gravity="center_vertical"
        android:onClick="showDep2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textDep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_deployment3"
        android:gravity="center_vertical"
        android:onClick="showDep3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textDep4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_deployment4"
        android:gravity="center_vertical"
        android:onClick="showDep4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textDep5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_deployment5"
        android:gravity="center_vertical"
        android:onClick="showDep5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textDep6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_deployment6"
        android:gravity="center_vertical"
        android:onClick="showDep6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"  />

    <Button
        android:id="@+id/buttonDep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/random_button"
        android:onClick="RandomDeployment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>
