<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the9thage.android.the9thcompanion.References"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <Button
        android:id="@+id/buttonRef1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/text_ref1"
        android:onClick="showRef1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/buttonRef2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_ref2"
        android:gravity="center_vertical"
        android:onClick="showRef2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/buttonRef3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_ref3"
        android:gravity="center_vertical"
        android:onClick="showRef3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/buttonRef4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_ref4"
        android:gravity="center_vertical"
        android:onClick="showRef4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/buttonRef5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_ref5"
        android:gravity="center_vertical"
        android:onClick="showRef5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>
