<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the9thage.android.the9thcompanion.MapPack"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:theme="@android:style/Theme.Material.Light">

    <Button
        android:id="@+id/textMap1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/text_map1"
        android:onClick="showMap1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/textMap2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_map2"
        android:gravity="center_vertical"
        android:onClick="showMap2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/textMap3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_map3"
        android:gravity="center_vertical"
        android:onClick="showMap3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/textMap4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_map4"
        android:gravity="center_vertical"
        android:onClick="showMap4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/textMap5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/text_map5"
        android:gravity="center_vertical"
        android:onClick="showMap5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />

</LinearLayout>
